hphp/hack/test/typecheck/records/record_instance_other_type.php
<?hh

class NotARecord {}

function foo(): void {
  $bar = NotARecord['x' => 1];
}
